syntax = "proto3";

package pb;

option go_package = "github.com/scm-dev1dev5/mtm-community-forum/noti_rpc/pb";

import "google/protobuf/timestamp.proto";

service NotiService {
    rpc CreateNoti(CreateNotiRequest) returns (NotiResponse) {}
    rpc GetNoti(NotiRequest) returns (NotiResponse) {}
    rpc GetNotis(GetNotisRequest) returns (stream Noti) {}
    rpc UpdateNoti(UpdateNotiRequest) returns (NotiResponse) {}
    rpc DeleteNoti(NotiRequest) returns (DeleteNotiResponse) {}
    rpc getNotiByUserId(UserIdRequest) returns (stream Noti){}
    rpc GetNotiCount(NotiRequestByUserId) returns (NotiCountResponse) {}
    rpc MarkAllNotiAsRead (NotiRequestByUserId) returns (DeleteNotiResponse){}
    rpc GetNotiForUserSummary (NotiRequestByUserId) returns (NotiCountResponse) {}
  }

  message Noti {
    string _id = 1;
    string user_id = 2;
    int64 type = 3;
    string name=4;
    string description=5;
    optional string link=6;
    bool status=7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
  }

  message NotiResponse{
    Noti noti=1;
  }

  message CreateNotiRequest{
    string user_id = 1;
    int64 type= 3;
    string name=4;
    string description=5;
    optional string link=6;
    bool status=7;
  }

  message NotiRequest{
    string _id=1;
  }

  message UpdateNotiRequest{
    string _id = 1;
    optional string name=4;
    optional string description=5;
    optional string link=6;
    optional bool status=7;
  }

  message GetNotisRequest{
    optional int64 page = 1;
    optional int64 limit = 2;
  }

  message DeleteNotiResponse{
    bool success = 1;
  }

  message UserIdRequest{
    string user_id=1;
    optional int64 page = 2;
    optional int64 limit = 3;
  }

  message NotiRequestByUserId {
    string user_id =  1;
  }

  message NotiCountResponse { int64 count = 1;}